remove / from js and css declare

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Lapis, Papyrus, Scalpellus</title>
-    <script type="text/javascript" src="/js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script type="text/javascript" src="js/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
     <header>
