--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Lapis, Papyrus, Scalpellus</title>
     <script type="text/javascript" src="js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <header>
@@ -12,18 +12,17 @@
       <h2>a true test of skill</h2>
     </header>
     Please select an option:
-    <div id='playerBlock' class='mainBlock'>
-      <button id='0' class='button player'>Lapis</button>
-      <button id='1' class='button player'>Papyrus</button>
-      <button id='2' class='button player'>Scalpellus</button>
+    <div id="playerBlock" class="mainBlock">
+      <button id="0" class="button player">Lapis</button>
+      <button id="1" class="button player">Papyrus</button>
+      <button id="2" class="button player">Scalpellus</button>
     </div>
-    <div id='computerBlock' class='mainBlock'>
-      <span class='button computer'>Lapis</span>
-      <span class='button computer'>Papyrus</span>
-      <span class='button computer'>Scalpellus</span>
+    <div id="computerBlock" class="mainBlock">
+      <span class="button computer">Lapis</span>
+      <span class="button computer">Papyrus</span>
+      <span class="button computer">Scalpellus</span>
     </div>
-      
-  <div class='results mainBlock'></div>
-    
+
+    <div class="results mainBlock"></div>
   </body>
 </html>
