--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
       <h2>a true test of skill</h2>
     </header>
     Please select an option:
-    <div id="playerBlock" class="mainBlock">
-      <button id="0" class="button player">Lapis</button>
-      <button id="1" class="button player">Papyrus</button>
-      <button id="2" class="button player">Scalpellus</button>
-    </div>
-    <div id="computerBlock" class="mainBlock">
-      <span class="button computer">Lapis</span>
-      <span class="button computer">Papyrus</span>
-      <span class="button computer">Scalpellus</span>
-    </div>
+    <main>
+      <div id="playerBlock" class="mainBlock">
+        Please select an option: <br >
+        <button id="0" class="button player">Lapis</button>
+        <button id="1" class="button player">Papyrus</button>
+        <button id="2" class="button player">Scalpellus</button>
+      </div>
+      <div id="computerBlock" class="mainBlock">
+        CPU:
+        <span class="button computer">Lapis</span>
+        <span class="button computer">Papyrus</span>
+        <span class="button computer">Scalpellus</span>
+      </div>
 
-    <div class="results mainBlock"></div>
+      <div class="results mainBlock"></div>
+    </main>
   </body>
 </html>
